# wren1

./: .env  .gitignore  README.md  logs.json  policy.yaml  requirements.txt  untitled1.ipynb  wren_client.py
app/: config.py  database.py  main.py  mock_llm.py  policy_engine.py  proxy.py
app/logger/: audit_logger.py
app/models/: api_key.py  event.py
app/policy/: policy_engine.py
app/rag/: rag_scanner.py  registry.py
app/scanners/: injection_rules.py  input_scanner.py  output_scanner.py  pii_rules.py
app/security/: rate_limiter.py
app/securitylayer/: security_rules.json  wren_scanner.py
app/semantic/: attack_patterns.py  benign_patterns.py  intent_detector.py  ml_detector.py  model_loader.py  semantic_detector.py
demo-ui/: app.js  index.html
examples/: test.py
examples/wren-demo/: demo_app.py  test_langchain.py
examples/wren-demo/wren_langchain/: __init__.py  chat.py
wren-auth/: auth.py  db.py  keys.py  main.py
wren-dashboard/: package-lock.json  package.json
wren-dashboard/app/: page.tsx
wren-web/: .gitignore  README.md  knowledge-base.md  package-lock.json  package.json  tailwind.config.js
wren-web/Dashboard/: page.tsx
wren-web/app/: globals.css  layout.tsx  page.tsx
wren-web/app/dashboard/: page.tsx
wren-web/app/docs/: page.tsx
wren-web/app/login/: page.tsx
wren-web/components/: DemoSection.tsx  Features.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  Navbar.tsx
wren-web/lib/: api.ts
wren_sdk/: README.md  pyproject.toml  wren.config.json  wren_example.py
wren_sdk/wren_gateway/: __init__.py  cli.py  client.py  langchain_llm.py
(+1 files in other folders)
