[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wren-gateway"
version = "1.0.0"
description = "Wren AI Security Gateway SDK"
authors = [{name = "Kushagra Shukla"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["requests", "rich", "python-dotenv"]

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
wren = "wren_gateway.cli:init"